source/_patterns/02-molecules/blocks/feedback/_feedback.scss
.jcc-feedback {
  &[visible] {
    opacity: 1;
  }

  &[open] {
    min-width: 0;
    max-width: 100%;
  }

  .jcc-feedback__dialog {
    @include u-overflow(hidden);
    visibility: hidden;

    &[open] {
      @include u-display("inline-block");
      @include u-position("fixed");
      @include u-left(0);
      @include u-bottom(0);
      @include u-border(1px, base-light);
      @include u-bg("white");
      @include u-overflow("visible");
      @include u-overflow-x("auto");
      @include u-padding(0);
      @include u-height("auto");
      visibility: visible;
      @media only screen and (orientation: landscape) {
        @include u-height(full);
      }
      @include at-media("tablet-lg") {
        @include u-position("relative");
        @include u-width("mobile-lg");
      }
      // Galaxy Note exceptions
      @media only screen and (max-height: 415px) {
        @include u-position("fixed");
      }
    }

    .icon-close {
      @include u-height(4);
      @include u-width(4);
      @include u-color("white");
    }

    [data-feedback^="trigger"] {
      appearance: none;
      border: 0;
    }

    .js-webform-webform-buttons label {
      margin: 0 10px 30px 0;
    }

    textarea,
    input {
      margin-bottom: 20px;
    }
  }

  .jcc-feedback__dialog-header {
    @include u-position("relative");
    @include u-minh(6);
    @include dark-background("primary-dark");
    @include u-padding-y(3);
    @include u-padding-x(2);

    .icon-like-dislike {
      @include u-height(5);
      @include u-width(5);
      @include u-color("blue-cool-10v");
      margin-bottom: -0.8rem;
    }

    h2 {
      @extend .heading-h3;
    }
  }

  .jcc-feedback__dialog-header--lead {
    @include u-margin-bottom(2);
    @include u-color("blue-cool-10v");
  }

  .jcc-feedback__action-button {
    @include u-minw(10);
    @include u-bg("blue-cool-10v");
    @include u-margin-bottom(2);
    @include u-shadow("none");

    &:active,
    &:focus {
      @include u-bg("white");
    }
  }

  .jcc-feedback__actions {
    button {
      @extend .jcc-feedback__action-button;
    }
  }

  .jcc-feedback__dialog-body {
    .jcc-feedback__dialog-button--submit {
      @include u-width("full");
      @include u-margin-top(2);
      @include u-text("uppercase");
      max-width: 30rem;
    }

    .usa-button--primary {
      @extend .jcc-feedback__dialog-button--submit;
    }

    // BEGIN Drupal Web Form Adjustments
    .webform-submission-form {
      & > div {
        @include u-margin-x(2);
      }

      div[data-drupal-messages] {
        @include u-position(absolute);
        @include u-z(100);
        margin-top: -35px;

        .usa-alert {
          padding: 0 1.25rem 0.5rem 1.75rem;
        }
      }

      .usa-label {
        &:first-child {
          @include u-margin-top(0);
        }
      }

      fieldset {
        @extend .jcc-feedback__dialog-header;
        @include u-position("relative");
        @include u-padding-x(2);
        top: -1.5rem;

        .jcc-form-group__title {
          @extend .heading-h3;
          @include u-margin(0);
        }

        .jcc-feedback__action-button--webform {
          @extend .usa-button;
          @extend .usa-button--outline;
          @extend .usa-button--round;
          @extend .jcc-feedback__action-button;

          &:hover {
            @extend .usa-button--hover;
            @include u-bg("white");
            @include u-shadow("none");
          }

          &:active {
            @include u-bg("white");
          }
        }

        .js-webform-webform-buttons {
          .ui-button {
            @extend .jcc-feedback__action-button--webform;
          }

          .ui-state-active {
            @include u-bg("white");
          }

          .ui-visual-focus {
            @extend .usa-focus;
          }
        }
      }

      .button {
        @extend .jcc-feedback__action-button--webform;
      }

      .webform-button--submit {
        @extend .jcc-feedback__dialog-button--submit;
      }
    }

    .webform-confirmation__message {
      @include u-margin(1);
    }
    //END
  }

  .jcc-feedback__dialog-close {
    @include u-position("absolute");
    @include u-top(1);
    @include u-right(1);
  }

  .jcc-feedback__trigger-container {
    @include u-width("auto");

    button {
      @include u-width("auto");
      @include u-margin-right(0);
      @include u-bg("primary-dark");
      @include u-color("blue-cool-10v");
      @include u-font-weight("normal");

      &:hover {
        @include u-bg("blue-80v");
      }
    }

    .icon-like-dislike {
      @include u-position("relative");
      @include u-top(0);
      @include u-height(6);
      @include u-width(6);
      margin-top: -0.5rem;
    }
  }
}

